--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
+<!--random to be able to add and push-->
 <html>
 <head>
-<style> 
+<style>
 body {
   background-color: grey;
 }
@@ -9,8 +10,8 @@ body {
   border-radius: 35px;
   width: 300px;
   height: 100px;
-  background-color: red;
-  box-shadow: 0px 0px 50px 25px rgba(0,0,0,0.25) inset;
+  background-color: black;
+  box-shadow: 0px 0px 50px 25px hsla(160, 69%, 36%, 1) inset;
   position: relative;
   left: -20%;
   content: "";
@@ -22,7 +23,7 @@ body {
 .slide-out:after {
   content: "";
   transition: all 2s ease-in-out;
-  margin-left: 80px;
+  margin-left: 10rem;
 }
 
 .slide-out:hover {
@@ -36,6 +37,7 @@ body {
   text-align: center;
   color: white;
   transform: rotate(-90deg);
+  transition: 2s ease-in;
 }
 .scanner {
   border: 1px solid black;
@@ -44,7 +46,7 @@ body {
   width: 300px;
   height: 100px;
   background-color: red;
-  box-shadow: -250px 0px 25px 25px rgba(0,0,0,0.25) inset;
+  box-shadow: -250px 0px 25px 25px hsla(160, 69%, 36%, 1) inset;
   animation: scanner 2s linear alternate infinite ;
 }
 
@@ -55,19 +57,63 @@ body {
   width: 300px;
   height: 100px;
   background-color: red;
-  box-shadow: 0px 0px 50px 25px rgba(0,0,0,0.25) inset;
+  box-shadow: 0px 0px 50px 25px hsla(160, 69%, 36%, 1) inset;
   animation: pulsing 2s linear alternate infinite;
 }
 
 @keyframes scanner {
-  from { box-shadow: -250px 0px 25px 25px rgba(0,0,0,0.25) inset;}
-  to {  box-shadow: 250px 0px 25px 25px rgba(0,0,0,0.25) inset;} 
+  from { box-shadow: -250px 0px 25px 25px hsla(160, 69%, 36%, 1) inset;}
+  to {  box-shadow: 250px 0px 25px 25px hsla(160, 69%, 36%, 1) inset;}
 }
 
 @keyframes pulsing {
-  from { box-shadow: 0px 0px 25px 10px rgba(0,0,0,0.25) inset;}
-  to {  box-shadow: 0px 0px 25px 40px rgba(0,0,0,0.25) inset;}  
+  from { box-shadow: 0px 0px 25px 10px hsla(160, 69%, 36%, 1) inset;}
+  to {  box-shadow: 0px 0px 25px 40px hsla(160, 69%, 36%, 1) inset;}
 }
+
+/* Float Shadow */
+.hvr-float-shadow {
+  display: inline-block;
+  vertical-align: middle;
+  -webkit-transform: perspective(1px) translateZ(0);
+  transform: perspective(1px) translateZ(0);
+  box-shadow: 0 0 1px transparent;
+  position: relative;
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform;
+  transition-property: transform;
+}
+.hvr-float-shadow:before {
+  pointer-events: none;
+  position: absolute;
+  z-index: -1;
+  content: '';
+  top: 100%;
+  left: 5%;
+  height: 10px;
+  width: 90%;
+  opacity: 0;
+  background: -webkit-radial-gradient(center, ellipse, rgba(0, 0, 0, 0.55) 0%, transparent 80%);
+  background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0.55) 0%, transparent 80%);
+  /* W3C */
+  -webkit-transition-duration: 0.3s;
+  transition-duration: 0.3s;
+  -webkit-transition-property: transform, opacity;
+  transition-property: transform, opacity;
+}
+.hvr-float-shadow:hover, .hvr-float-shadow:focus, .hvr-float-shadow:active {
+  -webkit-transform: translateY(-5px);
+  transform: translateY(-5px);
+  /* move the element up by 5px */
+}
+.hvr-float-shadow:hover:before, .hvr-float-shadow:focus:before, .hvr-float-shadow:active:before {
+  opacity: 1;
+  -webkit-transform: translateY(5px);
+  transform: translateY(5px);
+  /* move the element down by 5px (it will stay in place because it's attached to the element that also moves up 5px) */
+}
+
 
 </style>
 </head>
@@ -78,7 +124,7 @@ body {
 <br/>
 <div class="scanner"></div>
 <br/>
-<div class="pulsing"></div>
- 
+<div class="pulsing hvr-float-shadow"></div>
+
 </body>
 </html>
